Details
-
Bug
-
Status: Closed
-
Not Evaluated
-
Resolution: Done
-
5.11.1
-
None
-
79888d87ad08ec120fc170c7d450c5ac1067ce89
Description
In file chartaxiselement.cpp: https://github.com/qt/qtcharts/blob/5.11/src/charts/axis/chartaxiselement.cpp#L452
Method ChartAxisElement::createDateTimeLabels
This is useless code
int n = qMax(int(-qFloor(std::log10((max - min) / (ticks - 1)))), 0); n++;