ChartAxisElement: cleanup unused code

This patch removes an unused variable from createDateTimeLabels.

Task-number: QTBUG-70179
Change-Id: Iafabb474890913c33d95d3766f243e8145f0935b
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>